# computer-graphic-project

./: CMakeLists.txt  README.md  drawlabel.cpp  drawlabel.h  viewer.pro  widget.cpp  widget.h  widget.ui
commands/: add_model_command.cpp  add_model_command.h  basecommand.h  light_edit_command.cpp  light_edit_command.h  mirror_edit_command.cpp  mirror_edit_command.h  move_camera_command.cpp  move_camera_command.h  pitch_camera_command.cpp  pitch_camera_command.h  remove_model_command.cpp  remove_model_command.h  render_command.cpp  render_command.h  roll_camera_command.cpp  roll_camera_command.h  transform_model_command.cpp  transform_model_command.h  yaw_camera_command.cpp  yaw_camera_command.h
exceptions/: base_viewer_exeption.h  camera_lack_exception.h  drawer_exception.h  file_open_exception.h  model_build_exception.h  object_search_exception.h  object_type_exception.h
facade/: viewer_facade.cpp  viewer_facade.h
gui/: addition_dialog.cpp  addition_dialog.h  addition_dialog.ui
intermediary/: intermediary.cpp  intermediary.h
lights/: BaseLight.h  PointLight.cpp  PointLight.h
math/: matrix.cpp  matrix.h  point.cpp  point.h  transform_matrix.cpp  transform_matrix.h  vector3d.cpp  vector3d.h
objects/: Material.h  camera.cpp  camera.h  model.cpp  model.h  object.h
objects/geometry_objects/: GeometryObject.h  Parallelepiped.cpp  Parallelepiped.h  Prism.cpp  Prism.h  Pyramid.cpp  Pyramid.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
raytracer/: Raytracer.cpp  Raytracer.h
render/: base_drawer.h  qt_drawer.cpp  qt_drawer.h  renderer.cpp  renderer.h
scene/: scene.cpp  scene.h
transformations/: camera_manager.cpp  camera_manager.h  transformer.cpp  transformer.h
uploading/: abs_model_loader.h  base_loader.h  base_loader_imp.h  file_loader.cpp  file_loader.h  model_builder.cpp  model_builder.h  model_loader.cpp  model_loader.h
